[package]
name = "rexp"
version = "0.1.0"
authors = ["Sean Pan <driftstory@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# in case you meets "no authentication available" when installing dependencies 
# see :https://doc.rust-lang.org/cargo/appendix/git-authentication.html#git-authentication
[dependencies]
# wasm-bindgen = "0.2"
wasm-bindgen = { version = "0.2", optional = true }
chrono = "0.4"

[features]
default = []
wasm = ["wasm-bindgen"]

[profile.release]
opt-level = "s"
